--- a/src/pymc_vibes/server/templates/index.html
+++ b/src/pymc_vibes/server/templates/index.html
@@ -4,28 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pymc-vibes</title>
-    <style>
-      #chart-wrapper {
-        max-width: 1400px;
-        margin: auto;
-      }
-      #time-slider {
-        /*
-        Reset browser-default styling that can cause mis-alignment.
-        box-sizing ensures padding/border are included in the element's total width/height.
-        */
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-      }
-    </style>
   </head>
   <body>
-    <h1>Poisson Cohort Event Timelines</h1>
-    <div id="chart-wrapper">
-      <div id="chart-container"></div>
-    </div>
-    <pre id="event-details"></pre>
-    <script type="module" src="/static/index.js"></script>
+    <h1>pymc-vibes</h1>
+    <p>Available pages:</p>
+    <ul>
+      <li><a href="/poisson-cohorts">Poisson Cohorts</a></li>
+    </ul>
   </body>
 </html>
