--- a/src/pymc_vibes/server/templates/poisson_cohorts.html
+++ b/src/pymc_vibes/server/templates/poisson_cohorts.html
@@ -23,6 +23,7 @@
   <body>
     <h1>Poisson Cohort Event Timelines</h1>
     <div id="chart-wrapper">
+      <div id="global-posterior-container"></div>
       <div id="chart-container"></div>
     </div>
     <pre id="event-details"></pre>
