stub out the other UIs

--- a/src/pymc_vibes/server/templates/index.html
+++ b/src/pymc_vibes/server/templates/index.html
@@ -9,6 +9,9 @@
     <h1>pymc-vibes</h1>
     <p>Available pages:</p>
     <ul>
+      <li><a href="/bernoulli">Bernoulli</a></li>
+      <li><a href="/ab-test">AB Test</a></li>
+      <li><a href="/multi-armed-bandits">Multi Armed Bandits</a></li>
       <li><a href="/poisson-cohorts">Poisson Cohorts</a></li>
     </ul>
   </body>
