--- a/src/pymc_vibes/server/templates/multi_armed_bandits.html
+++ b/src/pymc_vibes/server/templates/multi_armed_bandits.html
@@ -1,23 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pymc-vibes: Multi-Armed Bandits</title>
-    <style>
-      #chart-wrapper {
-        max-width: 800px;
-        margin: auto;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Multi-Armed Bandits</h1>
-    <div id="chart-wrapper">
-      <div id="chart-container"></div>
-      <hr />
-      <div id="trials-container"></div>
-    </div>
-    <script type="module" src="/static/multi_armed_bandits.js"></script>
-  </body>
-</html>
+{% extends "detail_base.html" %} {% block title %}pymc-vibes: Multi-Armed
+Bandits{% endblock %} {% block page_title %}Multi-Armed Bandits{% endblock %} {%
+block chart_content %}
+<div id="chart-container"></div>
+<hr />
+<div id="trials-container"></div>
+{% endblock %} {% block javascript_module %}/static/multi_armed_bandits.js{%
+endblock %}
