--- a/src/pymc_vibes/server/templates/poisson_cohorts.html
+++ b/src/pymc_vibes/server/templates/poisson_cohorts.html
@@ -1,32 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pymc-vibes</title>
-    <style>
-      #chart-wrapper {
-        max-width: 1400px;
-        margin: auto;
-      }
-      #time-slider {
-        /*
-        Reset browser-default styling that can cause mis-alignment.
-        box-sizing ensures padding/border are included in the element's total width/height.
-        */
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Poisson Cohort Event Timelines</h1>
-    <div id="chart-wrapper">
-      <div id="global-posterior-container"></div>
-      <div id="chart-container"></div>
-    </div>
-    <pre id="event-details"></pre>
-    <script type="module" src="/static/poisson_cohorts.js"></script>
-  </body>
-</html>
+{% extends "detail_base.html" %} {% block title %}pymc-vibes: Poisson Cohorts{%
+endblock %} {% block page_title %}Poisson Cohort Event Timelines{% endblock %}
+{% block chart_wrapper_width %}1400px{% endblock %} {% block extra_css %}
+#time-slider { /* Reset browser-default styling that can cause mis-alignment.
+box-sizing ensures padding/border are included in the element's total
+width/height. */ box-sizing: border-box; padding: 0; margin: 0; } {% endblock %}
+{% block chart_content %}
+<div id="global-posterior-container"></div>
+<div id="chart-container"></div>
+{% endblock %} {% block extra_content %}
+<pre id="event-details"></pre>
+{% endblock %} {% block javascript_module %}/static/poisson_cohorts.js{%
+endblock %}
