--- a/src/pymc_vibes/server/templates/bernoulli.html
+++ b/src/pymc_vibes/server/templates/bernoulli.html
@@ -1,7 +1,6 @@
 {% extends "detail_base.html" %} {% block title %}pymc-vibes: Bernoulli Trial{%
-endblock %} {% block page_title %}Bernoulli Trial{% endblock %} {% block
-chart_content %}
-<div id="chart-container"></div>
+endblock %} {% block chart_content %}
+<div id="chart-container" data-experiment-name="{{ experiment.name }}"></div>
 <hr />
 <div id="trials-container"></div>
 {% endblock %} {% block javascript_module %}/static/bernoulli.js{% endblock %}
