--- a/src/pymc_vibes/server/templates/hazard_rate.html
+++ b/src/pymc_vibes/server/templates/hazard_rate.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %} {% block content %}
-<div id="trials-container" class="mb-8"></div>
 <div id="chart-container" data-experiment-name="{{ experiment.name }}"></div>
-<script type="module" src="/static/ab_test.js"></script>
+<script type="module" src="/static/hazard_rate.js"></script>
 {% endblock %}
